<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#fff"
	android:orientation="vertical">

	<EditText
		android:id="@+id/editTextIdDelete"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="20dp"
		android:ems="10"
		android:hint="@string/enter_your_id"
		android:inputType="textPersonName"
		tools:ignore="TextFields" />

	<EditText
		android:id="@+id/updateName"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="20dp"
		android:ems="10"
		android:hint="@string/Donor_name"
		android:inputType="textPersonName"
		tools:ignore="TextFields" />

	<Spinner
		android:id="@+id/spinnerAddress"
		android:layout_width="300dp"
		android:layout_height="50dp"
		android:layout_gravity="center"
		android:layout_marginTop="20dp"
		android:ems="10"
		android:entries="@array/Cities"
		android:hint="@string/blood_type_donor" />

	<EditText
		android:id="@+id/updatePhone"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="20dp"
		android:ems="10"
		android:hint="@string/donor_phone"
		android:inputType="phone"
		tools:ignore="TextFields" />


	<Spinner
		android:id="@+id/UpdateType"
		android:layout_width="300dp"
		android:layout_height="50dp"
		android:layout_gravity="center"
		android:layout_marginTop="20dp"
		android:ems="10"
		android:entries="@array/Donors"
		android:hint="@string/blood_type_donor" />

	<Button
		android:id="@+id/update"
		android:layout_width="284dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="20dp"
		android:background="@drawable/animation"
		android:elevation="8dp"

		android:text="@string/updateBTn"
		android:textColor="#fff"
		android:textStyle="bold" />

	<Button
		android:id="@+id/Delete"
		android:layout_width="284dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="20dp"
		android:background="@drawable/animation"
		android:elevation="8dp"

		android:text="@string/delete_dialog"
		android:textColor="#fff"
		android:textStyle="bold" />
</LinearLayout>